# microarchitecture-simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: cache.h  decode.h  isa.h  memory.h  pipeline.h  predictor.h  registers.h
programs/: loop_sum.h  memory_test.h
src/cpu/: pipeline.cpp  single_cycle.cpp
src/isa/: decode.cpp
src/memory/: cache.cpp
